# dynamic_object_detection

./: CMakeLists.txt  LICENSE  README.md  index.html  package.xml  readme.md
cfg/: parameters.yaml  parameters_arm.yaml  rviz_config.rviz  rviz_config_arm.rviz
include/normal_filter/: EigenToROS.hpp  downsampling.hpp  nanoflann_wrapper.hpp  ros_utils.h  types.h
launch/: debug.launch  normal_filter.launch  normal_filter_arm.launch  normal_filter_for_paper.launch
src/: apply_tf.cpp  dynamic_detector.cpp  upsampling.cpp
